правки+планшет+моб

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>mq-29 diploma</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" media="(min-width: 1170px)" href="css/desktop.css">
+	<link rel="stylesheet" media="(min-width: 641px) and (max-width: 1169px)" href="css/tablet.css">
+	<link rel="stylesheet" media="(max-width: 640px)" href="css/mobile.css">
 </head>
 <body>
 	<header class="header">
@@ -26,16 +28,14 @@
 			</nav>
 		</div>
 
-		<section class="title-header">
-			<h1 class="header-title">Блог о творчестве, спорте, и образе жизни</h1>
-		</section>
+		<h1 class="header-title">Блог о творчестве, спорте, и образе жизни</h1>
 	</header>
 
 
 	<section class="in-trend">
-		<section class="trand-tag">
+		<div class="trand-tag">
 			<h2 class="trand-headline">Сейчас в тренде</h2>
-		</section>
+		</div>
 		
 		<div class="cards-trand">
 			<article class="card-trand">
@@ -43,18 +43,16 @@
 					<img src="images/trend1.jpg" class="trend-img" alt="Сад на подоконнике">
 				</div>
 				<div class="trend-link">
-					<nav class="trend-menu">
-						<ul class="trend-menu-list">
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">Lifestyle</a></li>
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">INTERIOR</a></li>
-						</ul>
-					</nav>
+					<ul class="trend-menu-list">
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">Lifestyle</a></li>
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">INTERIOR</a></li>
+					</ul>
 
-					<h2 class="trend-title">
+					<h3 class="trend-title">
 						<a href="#0" class="trend-title-text">
 							Сейчас в тренде: сад на подоконнике
 						</a>
-					</h2>
+					</h3>
 				</div>
 			</article>
 			<article class="card-trand">
@@ -62,17 +60,15 @@
 					<img src="images/trend2.jpg" class="trend-img" alt="Сыры на картинке">
 				</div>
 				<div class="trend-link">
-					<nav class="trend-menu">
-						<ul class="trend-menu-list">
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">Food</a></li>						
-						</ul>
-					</nav>
+					<ul class="trend-menu-list">
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">Food</a></li>						
+					</ul>
 
-					<h2 class="trend-title">
+					<h3 class="trend-title">
 						<a href="#0" class="trend-title-text">
 							сыры на красивых картинках из интернета: какие они на вкус?
 						</a>
-					</h2>
+					</h3>
 				</div>
 			</article>
 			<article class="card-trand">
@@ -80,18 +76,16 @@
 					<img src="images/trend3.jpg" class="trend-img" alt="Человек на фоне гор">
 				</div>
 				<div class="trend-link">
-					<nav class="trend-menu">
-						<ul class="trend-menu-list">
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">Lifestyle</a></li>
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">tRAVEL</a></li>
-						</ul>
-					</nav>
+					<ul class="trend-menu-list">
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">Lifestyle</a></li>
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">tRAVEL</a></li>
+					</ul>
 
-					<h2 class="trend-title">
+					<h3 class="trend-title">
 						<a href="#0" class="trend-title-text">
 							СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ
 						</a>
-					</h2>
+					</h3>
 				</div>
 			</article>
 			<article class="card-trand">
@@ -99,18 +93,16 @@
 					<img src="images/trend4.jpg" class="trend-img" alt="Лимоны в ящике">
 				</div>
 				<div class="trend-link">
-					<nav class="trend-menu">
-						<ul class="trend-menu-list">
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">food</a></li>
-							<li class="trend-menu-list-item"><a href="#0" class="trend-a">health</a></li>
-						</ul>
-					</nav>
+					<ul class="trend-menu-list">
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">food</a></li>
+						<li class="trend-menu-list-item"><a href="#0" class="trend-a">health</a></li>
+					</ul>
 
-					<h2 class="trend-title">
+					<h3 class="trend-title">
 						<a href="#0" class="trend-title-text">
 							Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?
 						</a>
-					</h2>
+					</h3>
 				</div>
 			</article>
 		</div>
@@ -124,12 +116,10 @@
 					<img class="main-img" src="images/last-post1.jpg" alt="Человек на пляже">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Travel</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Health</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Travel</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Health</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -153,12 +143,10 @@
 					<img class="main-img" src="images/last-post2.jpg" alt="Урок йоги">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Health</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Lifestyle</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Health</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Lifestyle</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -182,11 +170,9 @@
 					<img class="main-img" src="images/last-post3.jpg" alt="Танцующие люди">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Music</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Music</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -211,12 +197,10 @@
 					<img class="main-img" src="images/last-post4.jpg" alt="Стол с едой">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Food</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Food</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -240,13 +224,11 @@
 					<img class="main-img" src="images/last-post5.jpg" alt="Подушка с надписью">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Interior</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Art</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Interior</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Art</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -270,12 +252,10 @@
 					<img class="main-img" src="images/last-post4.jpg" alt="Стол с едой">
 				</section>
 				<div class="main-content">
-					<nav class="main-menu">
-						<ul class="main-menu-list">
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
-							<li class="main-menu-list-item"><a href="#0" class="main-a">Food</a></li>
-						</ul>
-					</nav>
+					<ul class="main-menu-list">
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Lyfestyle</a></li>
+						<li class="main-menu-list-item"><a href="#0" class="main-a">Food</a></li>
+					</ul>
 
 					<h2 class="main-title">
 						<a href="#0" class="main-subject">
@@ -298,9 +278,9 @@
 		
 		<aside class="sidebar">
 
-			<section class="sidebar-tag">
+			<div class="sidebar-tag">
 				<h2 class="sidebar-title">Новые посты</h2>
-			</section>
+			</div>
 
 			<article class="article">
 				<div>
@@ -377,46 +357,41 @@
 				<button class="search-button"></button>
 			</form>
 
-			<section class="sidebar-tag">
+			<div class="sidebar-tag">
 				<h2 class="sidebar-title">Рассылка</h2>
-			</section>
+			</div>
 			<form class="subscribe-btn">
 				<input type="email" class="subscribe" placeholder="Ваш email-адрес" required>
 				<button class="button-subscribe">Подписаться</button>
 			</form>
 
-			<section class="sidebar-tag">
+			<div class="sidebar-tag">
 				<h2 class="sidebar-title">Теги</h2>
-			</section>
+			</div>
 
-			<nav class="tag-box">
-				<ul class="tags">
-					<li class="tag"><a href="#0" class="a-tag">Fashion</a></li>
-					<li class="tag"><a href="#0" class="a-tag">MuSiC</a></li>
-					<li class="tag"><a href="#0" class="a-tag">Lifestyle</a></li>
-					<li class="tag"><a href="#0" class="a-tag">ART</a></li>
-					<li class="tag"><a href="#0" class="a-tag">Interior</a></li>
-					<li class="tag"><a href="#0" class="a-tag">travel</a></li>
-					<li class="tag"><a href="#0" class="a-tag">FOOD</a></li>
-					<li class="tag"><a href="#0" class="a-tag">HEALTH</a></li>          
-				</ul>        
-			</nav> 
-			
+			<ul class="tags">
+				<li class="tag"><a href="#0" class="a-tag">Fashion</a></li>
+				<li class="tag"><a href="#0" class="a-tag">MuSiC</a></li>
+				<li class="tag"><a href="#0" class="a-tag">Lifestyle</a></li>
+				<li class="tag"><a href="#0" class="a-tag">ART</a></li>
+				<li class="tag"><a href="#0" class="a-tag">Interior</a></li>
+				<li class="tag"><a href="#0" class="a-tag">travel</a></li>
+				<li class="tag"><a href="#0" class="a-tag">FOOD</a></li>
+				<li class="tag"><a href="#0" class="a-tag">HEALTH</a></li>          
+			</ul>        			
 
-			<section class="sidebar-tag">
+			<div class="sidebar-tag">
 				<h2 class="sidebar-title">Темы</h2>
-			</section>
+			</div>
 
-			<nav class="topic-box">
-				<ul class="topics">
-					<li class="topic"><a href="#0" class="a-topic">Красота</a><span>12</span></li>
-					<li class="topic"><a href="#0" class="a-topic">Здоровье</a><span>4</span></li>
-					<li class="topic"><a href="#0" class="a-topic">Образ жизни</a><span>145</span></li>
-					<li class="topic"><a href="#0" class="a-topic">Музыка</a><span>28</span></li>
-					<li class="topic"><a href="#0" class="a-topic">Спорт</a><span>62</span></li>
-					<li class="topic"><a href="#0" class="a-topic">Йога</a><span>8</span></li>
-				</ul>
-			</nav>
+			<ul class="topics">
+				<li class="topic"><a href="#0" class="a-topic">Красота</a><span>12</span></li>
+				<li class="topic"><a href="#0" class="a-topic">Здоровье</a><span>4</span></li>
+				<li class="topic"><a href="#0" class="a-topic">Образ жизни</a><span>145</span></li>
+				<li class="topic"><a href="#0" class="a-topic">Музыка</a><span>28</span></li>
+				<li class="topic"><a href="#0" class="a-topic">Спорт</a><span>62</span></li>
+				<li class="topic"><a href="#0" class="a-topic">Йога</a><span>8</span></li>
+			</ul>
 
 		</aside>
 
@@ -444,7 +419,7 @@
 								<span class="product-price old-price">1000 ₽</span>
 								<span class="product-price actual-price">800 ₽</span>
 							</div> 
-							<button class="button shop-button" type="button">В магазин</button>
+							<a href="#0" class="shop-button">В магазин</a>
 						</div>
 					</section>
 				</article>
@@ -467,7 +442,7 @@
 							<div class="price">
 								<span class="product-price actual-price">3500 ₽</span>				
 							</div>
-							<button class="button shop-button" type="button">В магазин</button>
+							<a href="#0" class="shop-button">В магазин</a>
 						</div>						
 					</section>					
 				</article>
@@ -491,7 +466,7 @@
 								<span class="product-price old-price">500 ₽</span>
 								<span class="product-price actual-price">400 ₽</span>
 							</div>
-							<button class="button shop-button" type="button">В магазин</button>
+							<a href="#0" class="shop-button">В магазин</a>
 						</div>						
 					</section>					
 				</article>
@@ -506,35 +481,33 @@
 
 
 	<footer class="footer">
-		<nav class="footer-link">
-			<ul class="footer-icons">
-				<li class="footer-icon">
-					<a href="#0" class="icon-footer icon-twitter">
-						<span class="icon-footer-text">twitter</span>
-					</a>
-				</li>
-				<li class="footer-icon">
-					<a href="#0" class="icon-footer icon-pinterest">
-						<span class="icon-footer-text">pinterest</span>
-					</a>
-				</li>
-				<li class="footer-icon">
-					<a href="#0" class="icon-footer icon-facebook">
-						<span class="icon-footer-text">facebook</span>
-					</a>
-				</li>
-				<li class="footer-icon">
-					<a href="#0" class="icon-footer icon-instagram">
-						<span class="icon-footer-text">instagram</span>
-					</a>
-				</li>
-				<li class="footer-icon">
-					<a href="#0" class="icon-footer icon-tumblr">
-						<span class="icon-footer-text">tumblr</span>
-					</a>
-				</li>
-			</ul>
-		</nav>
+		<ul class="footer-icons">
+			<li class="footer-icon">
+				<a href="#0" class="icon-footer icon-twitter">
+					<span class="icon-footer-text">twitter</span>
+				</a>
+			</li>
+			<li class="footer-icon">
+				<a href="#0" class="icon-footer icon-pinterest">
+					<span class="icon-footer-text">pinterest</span>
+				</a>
+			</li>
+			<li class="footer-icon">
+				<a href="#0" class="icon-footer icon-facebook">
+					<span class="icon-footer-text">facebook</span>
+				</a>
+			</li>
+			<li class="footer-icon">
+				<a href="#0" class="icon-footer icon-instagram">
+					<span class="icon-footer-text">instagram</span>
+				</a>
+			</li>
+			<li class="footer-icon">
+				<a href="#0" class="icon-footer icon-tumblr">
+					<span class="icon-footer-text">tumblr</span>
+				</a>
+			</li>
+		</ul>
 
 		<div class="copyright">
 			<a class="copy-link" href="#0">
